[package]
name = "macron"
version = "0.1.0"
authors = ["Murtaza Ali Imtiaz <native@murtazai.org>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"

